--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "sapper dev",
-    "build": "sapper export",
-    "export": "sapper export --basepath didierm --legacy",
-    "start": "node __sapper__/build",
-    "deploy": "npm run export && node ./scripts/gh-pages.js"
+    "build": "sapper build --legacy",
+    "export": "sapper export --legacy",
+    "start": "node __sapper__/build"
   },
   "dependencies": {
     "compression": "^1.7.1",
