--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "sapper dev",
     "build": "sapper build --legacy",
-    "export": "sapper export  --basepath  --legacy",
+    "export": "sapper export  --basepath didierm --legacy",
     "start": "node __sapper__/build"
   },
   "dependencies": {
